Se agregan configuraciones de bases de datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/MASTERCLASS
+spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_89790236f4f17f6user=b77877676b3522&password=5eafe3a3
+spring.application.name=heroku_89790236f4f17f6
 #spring.datasource.url=jdbc:mysql://simplepassdb.cfsfmfytuvtc.us-east-2.rds.amazonaws.com:3306/simple
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=b77877676b3522
+spring.datasource.password=5eafe3a3
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
