--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_89790236f4f17f6user=b77877676b3522&password=5eafe3a3
+spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_89790236f4f17f6
 spring.application.name=heroku_89790236f4f17f6
 #spring.datasource.url=jdbc:mysql://simplepassdb.cfsfmfytuvtc.us-east-2.rds.amazonaws.com:3306/simple
 spring.jpa.hibernate.ddl-auto=create
@@ -17,3 +17,6 @@ jwt.secret.expiration.in.milliseconds=1200000
 
 logging.level.org.springframework.security=DEBUG
 spring.jpa.properties.hibernate.format_sql=true
+
+
+mysql://b77877676b3522:5eafe3a3@us-cdbr-east-06.cleardb.net/heroku_89790236f4f17f6?reconnect=true
