--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,6 @@
-spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_89790236f4f17f6
-spring.application.name=heroku_89790236f4f17f6
-#spring.datasource.url=jdbc:mysql://simplepassdb.cfsfmfytuvtc.us-east-2.rds.amazonaws.com:3306/simple
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.username=b77877676b3522
-spring.datasource.password=5eafe3a3
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/simple
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-
-# key to sign and verify jwt signature (minimum length 32 characters)
-jwt.secret.key=497e5789-db2c-41e7-8071-682721231b18
-
-# set jwt to expire after 20 minutes
-jwt.secret.expiration.in.milliseconds=1200000
-#spring.web.locale=es
-#spring.web.locale-resolver=fixed
-
-logging.level.org.springframework.security=DEBUG
-spring.jpa.properties.hibernate.format_sql=true
-
-
-mysql://b77877676b3522:5eafe3a3@us-cdbr-east-06.cleardb.net/heroku_89790236f4f17f6?reconnect=true
+spring.jpa.hibernate.ddl-auto=create
