--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
+spring.application.name=heroku_89790236f4f17f6
+server.port=${PORT:0}
+
 spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_89790236f4f17f6?reconnect=true
 spring.datasource.username=b77877676b3522
 spring.datasource.password=5eafe3a3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
