--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,22 @@
-spring.application.name=heroku_89790236f4f17f6
-server.port=${PORT:0}
-
-spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_89790236f4f17f6?reconnect=true
-spring.datasource.username=b77877676b3522
-spring.datasource.password=5eafe3a3
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.h2.console.enabled         = true
+spring.datasource.driverClassName = org.h2.Driver
+spring.datasource.url             = jdbc:h2:~/clinica_DB
+spring.datasource.username        = sa
+spring.datasource.password        =
+spring.jpa.show-sql               = true
+spring.jpa.hibernate.ddl-auto     = create
 
 spring.jackson.date-format=dd/MM/yyyy HH:mm
 
-#mysql://b77877676b3522:5eafe3a3@us-cdbr-east-06.cleardb.net/heroku_89790236f4f17f6?reconnect=true
-#spring.datasource.url=jdbc:mysql://simple-db.cqjrrhpdlooi.us-east-1.rds.amazonaws.com:3306/simple-db
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.username=admin
-#spring.datasource.password=65865478
-#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+#spring.application.name=heroku_89790236f4f17f6
+
+#spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_89790236f4f17f6?reconnect=true
+#spring.datasource.username=b77877676b3522
+#spring.datasource.password=5eafe3a3
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.show-sql=true
-# set jwt to expire after 20 minutes
-#jwt.secret.expiration.in.milliseconds=1200000
-#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=create
+
+#spring.jackson.date-format=dd/MM/yyyy HH:mm
+
