--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
 			<version>2.2</version>
 		</dependency>
 		<dependency>
+			<groupId>com.mercadopago</groupId>
+			<artifactId>sdk-java</artifactId>
+			<version>2.1.7</version>
+		</dependency>
+		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<version>8.0.32</version>
