--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,11 @@
-spring.h2.console.enabled         = true
-spring.datasource.driverClassName = org.h2.Driver
-spring.datasource.url             = jdbc:h2:~/clinica_DB
-spring.datasource.username        = sa
-spring.datasource.password        =
-spring.jpa.show-sql               = true
-spring.jpa.hibernate.ddl-auto     = create
+spring.application.name=heroku_89790236f4f17f6
+
+spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_89790236f4f17f6?reconnect=true
+spring.datasource.username=b77877676b3522
+spring.datasource.password=5eafe3a3
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jackson.date-format=dd/MM/yyyy HH:mm
-
-#spring.application.name=heroku_89790236f4f17f6
-
-#spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_89790236f4f17f6?reconnect=true
-#spring.datasource.username=b77877676b3522
-#spring.datasource.password=5eafe3a3
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
-
-#spring.jackson.date-format=dd/MM/yyyy HH:mm
-
